fixed hero section being too large on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -89,7 +89,7 @@
         background-size: cover;
         display: flex;
         align-items: end;
-        height: 100vh;
+        height: 100dvh;
     }
 
     @media screen and (min-width: 640px) {
